fix(databinding) : data variable에 layoutManager, adapter 추가 및 코드정리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BaseStructure</string>
+    <string name="not_found_msg">item not found!</string>
 </resources>
